app/assets/stylesheets/components/_cards.scss
.card-wrapper {
  margin: 10px;
}

.cards {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 16px;
}

.card {
  width: 100%;
}

.card--link {
  text-decoration: none;
}

.cards--title {
  font-weight: 700;
  font-size: 32px;
  margin-bottom: 8px;
}

.cards--subtitle {
  font-weight: 300;
  font-size: 22px;
  padding-bottom: 40px;
  color: #4D4D4D;
}

.card > img {
  width: 100%;
  height: 280px;
  object-fit: cover;
  border-radius: 8px;
  margin-bottom: 16px;
}

.card--name {
  color: #000;
  font-weight: 700;
  font-size: 18px;
  margin-bottom: 8px;
}

.card--cuisine {
  font-size: 16px;
  font-weight: 300;
  font-style: italic;
  color: #4D4D4D;
}


.load-more-button {
  margin: 0 auto;
  width: 215px;
  padding: 40px 0 60px  0;
}

.load-more-button > button {
  margin: 0 auto;
  width: 214px;
  height: 46px;
  background: #FFFFFF;
  border: 1px solid #C4C4C4;
  box-sizing: border-box;
  border-radius: 8px;
  font-family: "roboto";
  font-weight: 700;
  font-size: 18px;
  cursor: pointer;

  &:hover {
    background: #C4C4C4;
  }
}

.supermarkets {
  width: 100%;
}


.no-button-style {
  padding-bottom: 32px;
}

.not-found-message {
  width: 100%;
  color: #4D4D4D;
  text-align: center;
  padding: 60px 0;
}

@media only screen
    // and (device-width: 414px)
    // and (device-height: 896px)
    // and (-webkit-device-pixel-ratio: 3)
    and (max-width: 500px) {
      .cards--subtitle {
        font-size: 18px;
        padding-bottom: 32px;
      }

      .cards {
        grid-template-columns: 1fr;
        grid-gap: 32px;
      }

      .load-more-button {
        padding: 32px 0;
      }
    }

